--- a/styling_forms.html
+++ b/styling_forms.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="/css/styling_forms.css" />
+      <link rel="stylesheet" href="styling_forms.css" />
       <title>Styling Forms</title>
       <div id="main-container">
          <h1>Styling forms</h1>
